# prototype

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: data.h  model.h
include/data/: classifier.h  data.h  finite-loader.h
include/model/: ann.h  model.h  neo-neural.h
include/trainer/: trainer.h
include/util/: activation.h
src/: data.cpp
src/data/: classifier.cpp  data.cpp  finite-loader.cpp
src/model/: ann.cpp  model.cpp  neo-neural.cpp
src/trainer/: trainer.cpp
src/util/: activation.cpp
tool/: ann.py
